--- a/Python_Basics_I.ipynb
+++ b/Python_Basics_I.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOWoa3CtgA+evkcMv3YBIQR",
+      "authorship_tag": "ABX9TyNIoLbBt3SHMqvjQz3KIZJr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -123,7 +123,57 @@
       "source": [
         "---\n",
         "# Python Language Basics\n",
-        "<img src=\"https://saffarizadeh.com/D2L/Colab/1/Math.png\" width=500px; />"
+        "\n",
+        "<table>\n",
+        "<tr>\n",
+        "<td><b>Operator</b></td>\n",
+        "<td><b>Operation</b></td>\n",
+        "<td><b>Example</b></td>\n",
+        "<td><b>Evaluates to ...</b></td>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>+</td>\n",
+        "<td>Addition</td>\n",
+        "<td>2 + 2</td>\n",
+        "<td>4</td>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>-</td>\n",
+        "<td>Subtraction</td>\n",
+        "<td>5 - 2</td>\n",
+        "<td>3</td>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>*</td>\n",
+        "<td>Multiplication</td>\n",
+        "<td>3 + 5</td>\n",
+        "<td>15</td>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>/</td>\n",
+        "<td>Division</td>\n",
+        "<td>22 / 8</td>\n",
+        "<td>2.75</td>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>//</td>\n",
+        "<td>Integer Division</td>\n",
+        "<td>22 // 8</td>\n",
+        "<td>2</td>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>%</td>\n",
+        "<td>Modulus/Remainder</td>\n",
+        "<td>22 % 8</td>\n",
+        "<td>6</td>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>**</td>\n",
+        "<td>Exponent</td>\n",
+        "<td>2 ** 3</td>\n",
+        "<td>8</td>\n",
+        "</tr>\n",
+        "</table>"
       ]
     },
     {
@@ -354,7 +404,25 @@
         "---\n",
         "# Basic Data Types\n",
         "Numbers: Integers and floats work as you would expect from other languages.\n",
-        "<img src=\"https://saffarizadeh.com/D2L/Colab/1/DataTypes.png\" width=500px; />"
+        "\n",
+        "<table>\n",
+        "<tr>\n",
+        "<td><b>Data type</b></td>\n",
+        "<td><b>Examples</b></td>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>Integers</td>\n",
+        "<td>-2, -1, 0, 1, 2, 3, 4, 5</td>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>Floating-point numbers</td>\n",
+        "<td>-1.25, -1.0, -0.5, 0.0, 0.5, 1.0, 1.25</td>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>Strings</td>\n",
+        "<td>'a', 'aa', 'aaa', 'Hello!', '11 cats'</td>\n",
+        "</tr>\n",
+        "</table>"
       ]
     },
     {
