--- a/Python_Basics_II.ipynb
+++ b/Python_Basics_II.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO+zbjtlMDp0nbyMJvxI0dV",
+      "authorship_tag": "ABX9TyMthfYxlf+iB8fLwJH04JNS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -436,7 +436,7 @@
         "x = 10\n",
         "\n",
         "if x > 5:\n",
-        "  (\"The value of x is larger than 5.\")"
+        "  print(\"The value of x is larger than 5.\")"
       ],
       "execution_count": null,
       "outputs": [
@@ -501,7 +501,7 @@
         "if x > 10:\n",
         "  print(\"The value of x is larger than 10.\")\n",
         "elif x > 5:\n",
-        "  (\"The value of x is larger than 5.\")\n",
+        "  print(\"The value of x is larger than 5.\")\n",
         "else:\n",
         "  print(\"The value of x is less than or equal to 5.\")"
       ],
