--- a/Text_Classification.ipynb
+++ b/Text_Classification.ipynb
@@ -7,7 +7,7 @@
       "name": "Text Classification",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMgp1r3ZeHvutrDvz/m8Sjz",
+      "authorship_tag": "ABX9TyNh4xHccpJuqziqgt8UUEb1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,8 +50,18 @@
         "import tensorflow_hub as hub\n",
         "import tensorflow_datasets as tfds"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GSOaanehBZd_"
+      },
+      "source": [
+        "We first use `tensorflow_datasets` to load the imdb_reviews dataset.\n",
+        "`tensorflow_datasets` loads large datasets in a specific way that works well with TensorFlow models. The data loaded using this method is not in numpy array format. Instead it is a TensorFlow Dataset (see https://www.tensorflow.org/api_docs/python/tf/data/Dataset)."
+      ]
     },
     {
       "cell_type": "code",
@@ -70,13 +80,23 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Jy8EHq2-AkB_"
+      },
+      "source": [
+        "We load the pretrained model and extend it using a Sequential model to classify the input into two classes (positive vs. negative sentiment).\n",
+        "Note that we set the model as `trainable` which means all parameters can be retrained. Since those parameters already have some weights and biases that work well, it is likely that the final weights and biases are close to what we already have in this part of the model."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GbZbOIpKrCk_",
-        "outputId": "1f5e24a6-f69d-4cd9-b083-3acf25919796"
+        "outputId": "8db1209d-4f83-4427-e673-891dd6ebf274"
       },
       "source": [
         "hub_layer = hub.KerasLayer(\"https://tfhub.dev/google/nnlm-en-dim50/2\",\n",
@@ -90,7 +110,7 @@
         "\n",
         "model.summary()"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,18 +144,35 @@
         "              loss=tf.keras.losses.BinaryCrossentropy(from_logits=True),\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "voPx8ptXB18t"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ItepYQcYDduX"
+      },
+      "source": [
+        "Since the dataset we are using is large, we can choose the batch size we want to use to feed the data into our model. Before batching the data, we can shuffle it. To have the same shuffling outcome everytime we run this code on our machine, we can set a seed for the random shuffle. Here we use `10000`. We can use any number we want."
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "background_save": true,
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Mw-uTKJrGUo",
-        "outputId": "006c015c-8f4e-4842-a423-e461065cb3ee"
+        "outputId": "f4ef3b20-ef3a-4886-8224-2527b2304fa6"
       },
       "source": [
         "history = model.fit(train_data.shuffle(10000).batch(512),\n",
@@ -143,31 +180,31 @@
         "                    validation_data=validation_data.batch(512),\n",
         "                    verbose=1)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "30/30 [==============================] - 19s 572ms/step - loss: 0.7146 - accuracy: 0.5226 - val_loss: 0.6370 - val_accuracy: 0.6859\n",
+            "30/30 [==============================] - 5s 104ms/step - loss: 0.6807 - accuracy: 0.5662 - val_loss: 0.6037 - val_accuracy: 0.7066\n",
             "Epoch 2/10\n",
-            "30/30 [==============================] - 17s 543ms/step - loss: 0.6078 - accuracy: 0.7263 - val_loss: 0.5448 - val_accuracy: 0.7800\n",
+            "30/30 [==============================] - 3s 92ms/step - loss: 0.5607 - accuracy: 0.7597 - val_loss: 0.4973 - val_accuracy: 0.7905\n",
             "Epoch 3/10\n",
-            "30/30 [==============================] - 17s 549ms/step - loss: 0.4804 - accuracy: 0.8368 - val_loss: 0.4250 - val_accuracy: 0.8294\n",
+            "30/30 [==============================] - 3s 92ms/step - loss: 0.4275 - accuracy: 0.8517 - val_loss: 0.3926 - val_accuracy: 0.8448\n",
             "Epoch 4/10\n",
-            "30/30 [==============================] - 17s 556ms/step - loss: 0.3364 - accuracy: 0.8880 - val_loss: 0.3516 - val_accuracy: 0.8581\n",
+            "30/30 [==============================] - 3s 92ms/step - loss: 0.3018 - accuracy: 0.8974 - val_loss: 0.3385 - val_accuracy: 0.8595\n",
             "Epoch 5/10\n",
-            "30/30 [==============================] - 17s 547ms/step - loss: 0.2392 - accuracy: 0.9246 - val_loss: 0.3205 - val_accuracy: 0.8696\n",
+            "30/30 [==============================] - 3s 95ms/step - loss: 0.2172 - accuracy: 0.9326 - val_loss: 0.3145 - val_accuracy: 0.8690\n",
             "Epoch 6/10\n",
-            "30/30 [==============================] - 17s 558ms/step - loss: 0.1720 - accuracy: 0.9519 - val_loss: 0.3083 - val_accuracy: 0.8725\n",
+            "30/30 [==============================] - 3s 94ms/step - loss: 0.1586 - accuracy: 0.9538 - val_loss: 0.3067 - val_accuracy: 0.8735\n",
             "Epoch 7/10\n",
-            "30/30 [==============================] - 17s 556ms/step - loss: 0.1230 - accuracy: 0.9709 - val_loss: 0.3066 - val_accuracy: 0.8735\n",
+            "30/30 [==============================] - 3s 93ms/step - loss: 0.1161 - accuracy: 0.9714 - val_loss: 0.3072 - val_accuracy: 0.8725\n",
             "Epoch 8/10\n",
-            "30/30 [==============================] - 18s 574ms/step - loss: 0.0891 - accuracy: 0.9816 - val_loss: 0.3102 - val_accuracy: 0.8731\n",
+            "30/30 [==============================] - 3s 93ms/step - loss: 0.0845 - accuracy: 0.9827 - val_loss: 0.3132 - val_accuracy: 0.8719\n",
             "Epoch 9/10\n",
-            "30/30 [==============================] - 18s 567ms/step - loss: 0.0666 - accuracy: 0.9893 - val_loss: 0.3184 - val_accuracy: 0.8715\n",
+            "30/30 [==============================] - 3s 92ms/step - loss: 0.0614 - accuracy: 0.9895 - val_loss: 0.3224 - val_accuracy: 0.8699\n",
             "Epoch 10/10\n",
-            "30/30 [==============================] - 18s 573ms/step - loss: 0.0485 - accuracy: 0.9939 - val_loss: 0.3302 - val_accuracy: 0.8692\n"
+            "30/30 [==============================] - 3s 93ms/step - loss: 0.0449 - accuracy: 0.9945 - val_loss: 0.3363 - val_accuracy: 0.8709\n"
           ],
           "name": "stdout"
         }
@@ -180,17 +217,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qIXqDy1krIUt",
-        "outputId": "ddeb353f-b00f-4d43-f0a6-c48e3d712686"
+        "outputId": "13a448a3-96ae-4a72-8121-3429d37407e8"
       },
       "source": [
         "model.evaluate(test_data.batch(512), verbose=2)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "49/49 - 2s - loss: 0.3487 - accuracy: 0.8592\n"
+            "49/49 - 2s - loss: 0.3633 - accuracy: 0.8579\n"
           ],
           "name": "stdout"
         },
@@ -198,7 +235,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.34873026609420776, 0.8592000007629395]"
+              "[0.36330464482307434, 0.8579199910163879]"
             ]
           },
           "metadata": {
@@ -216,7 +253,7 @@
       "source": [
         "new_reviews = [\"This was a great movie\", \"This was a very bad movie\"]"
       ],
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -227,7 +264,7 @@
       "source": [
         "new_reviews_array = np.array(new_reviews)"
       ],
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -237,33 +274,33 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8045c69a-fc41-4aaa-bcd7-ac66d51d209b"
+        "outputId": "81af5cfd-f294-4475-e230-9853242d2135"
       },
       "source": [
         "model(new_reviews_array)"
       ],
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<tf.Tensor: shape=(2, 1), dtype=float32, numpy=\n",
-              "array([[0.92864037],\n",
-              "       [0.09608527]], dtype=float32)>"
+              "array([[0.9793732 ],\n",
+              "       [0.11797823]], dtype=float32)>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 9
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zJlrOto1reoC"
+        "id": "kGpGvJkots3r"
       },
       "source": [
         ""
