--- a/AI_Project_Student_Version.ipynb
+++ b/AI_Project_Student_Version.ipynb
@@ -6,7 +6,7 @@
       "name": "AI Project - Student Version",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP42/TGpKDQBMx63vHmexPn",
+      "authorship_tag": "ABX9TyO1SP/qYvrz5uxmc5buM+O2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -510,7 +510,7 @@
         "id": "LdkUosq64xr9"
       },
       "source": [
-        "encoded_imgs = autoencoder_two.encoder(x_test).numpy()"
+        "encoded_imgs = encoder_two(x_test).numpy()"
       ],
       "execution_count": null,
       "outputs": []
@@ -530,7 +530,7 @@
         "id": "69IKmf855N7w"
       },
       "source": [
-        "decoded_imgs = autoencoder_two.decoder(encoded_imgs).numpy()"
+        "decoded_imgs = decoder_two(encoded_imgs).numpy()"
       ],
       "execution_count": null,
       "outputs": []
