--- a/Working_with_Spreadsheets.ipynb
+++ b/Working_with_Spreadsheets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP+LuEBOm1mRGhnGxlXwVc+",
+      "authorship_tag": "ABX9TyM6nX7xvd1b41aPDFM14sGr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,10 +91,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 235
+          "height": 233
         },
         "id": "zRXv61f0tQyM",
-        "outputId": "039f0a92-479b-4cad-e0eb-6a6c826ed59d"
+        "outputId": "98731772-65b6-4a3d-9fc0-49c303dda9fe"
       },
       "source": [
         "students_sheet1.head()"
@@ -216,10 +216,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 80
+          "height": 79
         },
         "id": "eekDpKnjuEPN",
-        "outputId": "cdf6b0ae-4c64-4e96-b4b6-1c2772218ab7"
+        "outputId": "54f5045f-b746-4e0d-a3bd-04c93c04067c"
       },
       "source": [
         "students_sheet2.head()"
@@ -292,10 +292,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 235
+          "height": 233
         },
         "id": "Z2nIvFh0wdBi",
-        "outputId": "0bb163dd-f798-4348-a379-51d338a5425a"
+        "outputId": "c05eb78b-c1ed-4a84-ce93-db028fbc4ad6"
       },
       "source": [
         "students_sheet3.head()"
@@ -387,10 +387,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 297
+          "height": 294
         },
         "id": "WyZlHuHrudE-",
-        "outputId": "b7d73490-c7b6-4988-e82d-608fb2666a50"
+        "outputId": "401b8856-b7cc-4472-af71-3c3f0388d5a1"
       },
       "source": [
         "students_sheet1.describe()"
@@ -520,10 +520,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 142
+          "height": 141
         },
         "id": "QBX1Xu_7iS6a",
-        "outputId": "0cc055b0-6002-4f6c-9125-fc849d1759c9"
+        "outputId": "b057eae3-15d1-46f3-ff32-39267cfe5955"
       },
       "source": [
         "students_sheet1[0:2]"
@@ -609,7 +609,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C-YqFnkcxMJw",
-        "outputId": "55f8abfd-d419-4f12-963b-9336fdfd1d15"
+        "outputId": "9de29e6e-f602-4e24-f2ff-f39f2c1942a5"
       },
       "source": [
         "students_sheet1.loc[1]"
@@ -642,7 +642,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oxp5NKofiS34",
-        "outputId": "90bde434-4746-4f6f-e0fc-3abc9eb97096"
+        "outputId": "68069702-7f74-4f7e-b853-1d615ca15ba0"
       },
       "source": [
         "students_sheet1.iloc[1]"
@@ -675,7 +675,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0Eimcy5RwkDV",
-        "outputId": "8335b16a-5b71-4f73-e02e-c002e1ee86ac"
+        "outputId": "44b0d0f0-371c-4df1-cfd5-844b744e180e"
       },
       "source": [
         "students_sheet1[\"Quiz 1\"]"
@@ -709,7 +709,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4C2HH-RzxcZf",
-        "outputId": "d55b49ea-4e45-4c77-9b98-656905795d8a"
+        "outputId": "8be31e80-356e-4832-fd1b-43dd1e3c3138"
       },
       "source": [
         "students_sheet1[\"Quiz 1\"][1]"
@@ -737,7 +737,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BtpntQ3hxo5s",
-        "outputId": "1e2d6a85-6512-4130-e1e4-c5f80aa5c255"
+        "outputId": "48858d8b-2005-475d-81f5-902a0586d3cb"
       },
       "source": [
         "students_sheet1[\"Quiz 1\"].iloc[0]"
@@ -776,7 +776,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MlDogcWcwmf8",
-        "outputId": "6a90df9e-e1f7-4f64-c262-1596e1ac7153"
+        "outputId": "276b835e-a08e-4ecd-b955-7f1b7aac25f6"
       },
       "source": [
         "students_sheet1.at[1, \"Quiz 1\"]"
@@ -804,7 +804,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cOGyUyKKxFDL",
-        "outputId": "4c762d31-308d-4d8f-bb46-7c8e4dcf56bb"
+        "outputId": "c48a212f-c640-40ee-d61e-4320196f2ee8"
       },
       "source": [
         "students_sheet1.iat[0, 2]"
@@ -839,10 +839,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 173
+          "height": 171
         },
         "id": "44zyp6IiiS1C",
-        "outputId": "dfd93059-b5f8-48ca-9092-45805d93467b"
+        "outputId": "e7167a22-6b28-4ef1-c327-85acf8860729"
       },
       "source": [
         "students_sheet1[students_sheet1[\"Quiz 1\"] >= 90]"
@@ -942,7 +942,7 @@
       "source": [
         "students_sheet1[\"Quiz 1\"].mean()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -971,7 +971,7 @@
       "source": [
         "students_sheet1[students_sheet1[\"Quiz 1\"] >= students_sheet1[\"Quiz 1\"].mean()]"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1066,7 +1066,7 @@
       "source": [
         "students_sheet1[\"Quiz 2\"].mean()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1095,7 +1095,7 @@
       "source": [
         "students_sheet1[(students_sheet1[\"Quiz 1\"] >= students_sheet1[\"Quiz 1\"].mean()) | (students_sheet1[\"Quiz 2\"] >= students_sheet1[\"Quiz 2\"].mean())]"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1210,7 +1210,7 @@
         "both_quizzes_above_average = students_sheet1[(students_sheet1[\"Quiz 1\"] >= students_sheet1[\"Quiz 1\"].mean()) & (students_sheet1[\"Quiz 2\"] >= students_sheet1[\"Quiz 2\"].mean())]\n",
         "both_quizzes_above_average"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1283,7 +1283,7 @@
       "source": [
         "students_sheet1[\"Quiz Average\"] = (students_sheet1[\"Quiz 1\"] + students_sheet1[\"Quiz 2\"])/2"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1300,7 +1300,7 @@
         "\n",
         "quiz_columns = [column for column in students_sheet1.columns if \"Quiz\" in column]"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1315,7 +1315,7 @@
       "source": [
         "quiz_columns"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1343,7 +1343,7 @@
       "source": [
         "students_sheet1[quiz_columns[0]]"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1366,15 +1366,213 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "MzfA6bTevB2X"
+        "id": "g_lMCKMuSiY3"
       },
       "source": [
-        ""
+        "Slicing Columns"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 233
+        },
+        "id": "6wAokjWHSk2-",
+        "outputId": "e91dd610-ed16-431a-b22c-c5bb74cd6a6f"
+      },
+      "source": [
+        "students_sheet1.iloc[:, 1:4]"
       ],
-      "execution_count": 27,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Last Name</th>\n",
+              "      <th>Quiz 1</th>\n",
+              "      <th>Quiz 2</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ID</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Pearson</td>\n",
+              "      <td>90</td>\n",
+              "      <td>80</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Richmond</td>\n",
+              "      <td>100</td>\n",
+              "      <td>80</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Stanton</td>\n",
+              "      <td>85</td>\n",
+              "      <td>100</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Cotton</td>\n",
+              "      <td>90</td>\n",
+              "      <td>90</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Perez</td>\n",
+              "      <td>80</td>\n",
+              "      <td>90</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Last Name  Quiz 1  Quiz 2\n",
+              "ID                          \n",
+              "1    Pearson      90      80\n",
+              "2   Richmond     100      80\n",
+              "3    Stanton      85     100\n",
+              "4     Cotton      90      90\n",
+              "5      Perez      80      90"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MzfA6bTevB2X",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 233
+        },
+        "outputId": "1d53882f-6138-4614-e135-a3fe02c2016f"
+      },
+      "source": [
+        "students_sheet1.loc[:, \"Last Name\": \"Quiz 2\"]"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Last Name</th>\n",
+              "      <th>Quiz 1</th>\n",
+              "      <th>Quiz 2</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ID</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Pearson</td>\n",
+              "      <td>90</td>\n",
+              "      <td>80</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Richmond</td>\n",
+              "      <td>100</td>\n",
+              "      <td>80</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Stanton</td>\n",
+              "      <td>85</td>\n",
+              "      <td>100</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Cotton</td>\n",
+              "      <td>90</td>\n",
+              "      <td>90</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Perez</td>\n",
+              "      <td>80</td>\n",
+              "      <td>90</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Last Name  Quiz 1  Quiz 2\n",
+              "ID                          \n",
+              "1    Pearson      90      80\n",
+              "2   Richmond     100      80\n",
+              "3    Stanton      85     100\n",
+              "4     Cotton      90      90\n",
+              "5      Perez      80      90"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1406,7 +1604,7 @@
       "source": [
         "students_sheet2[\"Number of Sessions\"].to_numpy()"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1430,7 +1628,7 @@
       "source": [
         "students_sheet1[\"Attendance Score\"] = 100*students_sheet1[\"Attendance\"] / students_sheet2[\"Number of Sessions\"].to_numpy()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1446,7 +1644,7 @@
       "source": [
         "students_sheet1.head()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1572,7 +1770,7 @@
         "students_sheet1[\"Final Score\"] = ((students_sheet1[\"Attendance Score\"] * students_sheet2[\"Attendance Weight\"].values)\n",
         "                                 +(students_sheet1[\"Quiz Average\"] * students_sheet2[\"Quiz Weight\"].values))"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1588,7 +1786,7 @@
       "source": [
         "students_sheet1.head()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1730,7 +1928,7 @@
       "source": [
         "students_sheet1[\"xyz\"] = 0"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1746,7 +1944,7 @@
       "source": [
         "students_sheet1"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1885,7 +2083,7 @@
       "source": [
         "students_sheet1 = students_sheet1.drop(columns=[\"xyz\"])"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1901,7 +2099,7 @@
       "source": [
         "students_sheet1"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2059,7 +2257,7 @@
         "  students_sheet1.at[index, \"Final Score\"] = row['Final Score'] + 2\n",
         "  # students_sheet1[\"Final Score\"][index] = row['Final Score'] + 2"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2087,7 +2285,7 @@
       "source": [
         "students_sheet1.head()"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2235,7 +2433,7 @@
         "students_sheet1_by_quiz1 = students_sheet1.sort_values(['Final Score'], ascending=False)\n",
         "students_sheet1_by_quiz1.head()"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2378,7 +2576,7 @@
       "source": [
         "students_sheet1.to_excel('output.xlsx', sheet_name='grades', index=True)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2391,7 +2589,7 @@
         "  students_sheet1.to_excel(writer, sheet_name='grades', index=True)\n",
         "  both_quizzes_above_average.to_excel(writer, sheet_name='both quizzes above avg', index=True)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     }
   ]
