--- a/Working_with_Spreadsheets.ipynb
+++ b/Working_with_Spreadsheets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPnXeoq5R7KwAiWiitEv2hU",
+      "authorship_tag": "ABX9TyN24MOIARrMwQjheJ9vIfIi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -521,7 +521,7 @@
         "id": "ckRI_l23h5Ob"
       },
       "source": [
-        "Slicing Row"
+        "**Slicing Row**"
       ]
     },
     {
@@ -791,7 +791,7 @@
         "id": "H4yJ4gslhtmv"
       },
       "source": [
-        "Slicing Columns"
+        "**Slicing Columns**"
       ]
     },
     {
@@ -1229,7 +1229,7 @@
         "id": "NXPMnZyVhnHJ"
       },
       "source": [
-        "Preferred method:"
+        "**Preferred method:**"
       ]
     },
     {
